Fix: Daily report now updates correctly when tasks are completed

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,1 +1,41 @@
- 
+server {
+    listen 80;
+    server_name seu-dominio.com;
+    root /var/www/html/minha-agenda;  # Ajuste para o caminho onde você colocou os arquivos
+
+    index index.html;
+
+    # Configuração para PWA
+    location /sw.js {
+        add_header Cache-Control "public, max-age=0, must-revalidate";
+        add_header Service-Worker-Allowed "/";
+        try_files $uri =404;
+    }
+
+    location /workbox- {
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        try_files $uri =404;
+    }
+
+    location /manifest.webmanifest {
+        add_header Content-Type "application/manifest+json";
+        add_header Service-Worker-Allowed "/";
+        try_files $uri =404;
+    }
+
+    # Configuração para assets estáticos
+    location /assets {
+        expires 1y;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+
+    location /icons {
+        expires 1y;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+
+    # Redireciona todas as outras requisições para o index.html
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+} 
