--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,30 @@
+# Dependências
+node_modules
+.pnp
+.pnp.js
+
+# Produção
+dist
+build
+
+# Ambiente
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
+# Editor
+.vscode
 .idea
+*.swp
+*.swo
+
+# Sistema
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
